--- a/index.html
+++ b/index.html
@@ -9,9 +9,64 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <header class="header">
+        <div class="content">
+          <section class="section-left">
+            <div class="photo">
+              <div class="photo__wr">
+                <div class="photo__inner">
+                  <img
+                    src="images/img__99.jpg"
+                    alt="photo"
+                    width="186"
+                    height="186"
+                  />
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="section-right">
+            <h1 class="header__title">Basalyuk <span>Dmitriy</span></h1>
+          </section>
+        </div>
+      </header>
+
+      <main class="main">
+        <div class="content">
+          <aside class="section-left"></aside>
+          <section class="section-right">
+            <div class="main-section-right__wr">
+              <div class="title-wrap title-gray title-top">
+                <h2 class="section__title">web developer</h2>
+              </div>
+              <div class="title-wrap title-flowerblue mt-50">
+                <h2 class="section__title">Work experience</h2>
+              </div>
+              <div class="title-wrap title-flowerblue mt-50">
+                <h2 class="section__title">Education</h2>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <div class="footer__wrap">
+          <a class="footer__link-logo" href="https://rs.school/js">
+            <img
+              src="images/rs_school_js.svg"
+              alt="Rs School"
+              width="65"
+              height="24"
+            />
+          </a>
+          <p>&#9400; 2021</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
