--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Basalyuk Dmitriy</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -37,18 +37,94 @@
 
       <main class="main">
         <div class="content">
-          <aside class="section-left"></aside>
+          <aside class="section-left">
+            <h3 class="block-title">Contacts</h3>
+            <ul>
+              <li>email: blackrook115@gmail.com</li>
+              <li>phone: +7 918 975 51 06</li>
+              <li>telegram: @Dimitos</li>
+            </ul>
+            <h3 class="block-title">Skills</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>JQuery</li>
+              <li>PHP</li>
+              <li>MySql</li>
+            </ul>
+            <h3 class="block-title">Code example</h3>
+            <pre>
+  const hello = name => `Hello, ${name}!`;
+  hello('RS School');
+            </pre>
+          </aside>
           <section class="section-right">
             <div class="main-section-right__wr">
               <div class="title-wrap title-gray title-top">
                 <h2 class="section__title">web developer</h2>
               </div>
+              <h3 class="block-title">About me</h3>
+              <ul>
+                <li>
+                  Hi! I have a great desire to move towards fullstack JavaScript
+                  development.
+                </li>
+                <li>
+                  My priorities are learning: JavaScript, Node.js, React.js,
+                  Vue.js, Typescript.
+                </li>
+                <li>
+                  I want to participate in team development using Git, learn the
+                  component approach to development.
+                </li>
+              </ul>
+              <p>
+                The first “Hello, World!” I wrote at 49 years old. I have passed
+                the initial level of web development, I have a little experience
+                of commercial work on freelance. Now I am 51 and I want to study
+                at RS School. This proves my learning ability, efficiency and
+                determination.
+              </p>
               <div class="title-wrap title-flowerblue mt-50">
                 <h2 class="section__title">Work experience</h2>
               </div>
+              <h4>
+                November 2020 - March 2021 - internship “WebFormula” Krasnodar
+              </h4>
+              <p>
+                Project role: Html layout. Project description: html layout,
+                frontend, site support.
+              </p>
+              <h4>Now</h4>
+              <p>Freelance, support ruralisation.ru</p>
+
+              <h3 class="block-title">Portfolio:</h3>
+              <ul>
+                <li>Here is one of my works: Expedition</li>
+                <li>
+                  Here are my other active and educational projects: Projects
+                </li>
+              </ul>
               <div class="title-wrap title-flowerblue mt-50">
                 <h2 class="section__title">Education</h2>
               </div>
+              <h4 class="block-title">
+                Ural Pedagogical University, Yekaterinburg, Faculty of
+                Mathematics, 1991
+              </h4>
+              <h4 class="block-title">
+                Courses GeekBrains, Faculty of web development, 2019
+              </h4>
+              <ul>
+                Certificates:
+                <li>GeekBrains HTML/CSS</li>
+                <li>GeekBrains JavaScript</li>
+                <li>GeekBrains PHP</li>
+                <li>GeekBrains MySQL</li>
+              </ul>
+              <h3 class="block-title">English</h3>
+              <p>A2 GeekBrains Certificate English test</p>
             </div>
           </section>
         </div>
