feat: add styles and links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <header class="header">
         <div class="content">
-          <section class="section-left">
+          <div class="section-left">
             <div class="photo">
               <div class="photo__wr">
                 <div class="photo__inner">
@@ -28,7 +28,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </div>
           <section class="section-right">
             <h1 class="header__title">Basalyuk <span>Dmitriy</span></h1>
           </section>
@@ -39,12 +39,33 @@
         <div class="content">
           <aside class="section-left">
             <h3 class="block-title">Contacts</h3>
+            <div class="title-underline"></div>
             <ul>
-              <li>email: blackrook115@gmail.com</li>
-              <li>phone: +7 918 975 51 06</li>
-              <li>telegram: @Dimitos</li>
+              <li>
+                email:
+                <br />
+                <a href="mailto:blackrook115@gmail.com" title="mail"
+                  >blackrook115@gmail.com</a
+                >
+              </li>
+              <li>
+                phone:
+                <br />
+                <a href="tel:79189755106" title="phone">+7 918 975 51 06</a>
+              </li>
+              <li>
+                telegram:
+                <br />
+                <a
+                  href="https://t.me/Dimitos"
+                  target="blanc"
+                  title="Telegram/@Dimitos"
+                  >@Dimitos</a
+                >
+              </li>
             </ul>
             <h3 class="block-title">Skills</h3>
+            <div class="title-underline"></div>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
@@ -52,20 +73,34 @@
               <li>JQuery</li>
               <li>PHP</li>
               <li>MySql</li>
+              <li>Git</li>
             </ul>
             <h3 class="block-title">Code example</h3>
-            <pre>
-  const hello = name => `Hello, ${name}!`;
-  hello('RS School');
-            </pre>
+            <div class="title-underline"></div>
+            <pre class="code">
+const hello = name => `Hello, ${name}!`;
+hello('RS School');</pre
+            >
+            <h3 class="block-title">English</h3>
+            <div class="title-underline"></div>
+            <p class="test">
+              A2
+              <a
+                href="https://gb.ru/certificates/650735.en"
+                target="blanc"
+                title="Certificate English test"
+                >Certificate</a
+              >
+            </p>
           </aside>
           <section class="section-right">
             <div class="main-section-right__wr">
               <div class="title-wrap title-gray title-top">
                 <h2 class="section__title">web developer</h2>
               </div>
-              <h3 class="block-title">About me</h3>
-              <ul>
+              <h3 class="block-title">Profile</h3>
+              <div class="title-underline"></div>
+              <ul class="list">
                 <li>
                   Hi! I have a great desire to move towards fullstack JavaScript
                   development.
@@ -79,52 +114,111 @@
                   component approach to development.
                 </li>
               </ul>
-              <p>
-                The first “Hello, World!” I wrote at 49 years old. I have passed
-                the initial level of web development, I have a little experience
-                of commercial work on freelance. Now I am 51 and I want to study
-                at RS School. This proves my learning ability, efficiency and
-                determination.
-              </p>
-              <div class="title-wrap title-flowerblue mt-50">
+              <blockquote>
+                <i>
+                  The first “Hello, World!” I wrote at 49 years old. I have
+                  passed the initial level of web development, I have a little
+                  experience of commercial work on freelance. Now I am 51 and I
+                  want to study at RS School. This proves my learning ability,
+                  efficiency and determination.
+                </i>
+              </blockquote>
+              <div class="title-wrap title-flowerblue">
                 <h2 class="section__title">Work experience</h2>
               </div>
+              <h6>November 2020 - March 2021</h6>
               <h4>
-                November 2020 - March 2021 - internship “WebFormula” Krasnodar
+                Internship
+                <a
+                  href="https://webformula.pro"
+                  target="blanc"
+                  title="Webformula"
+                  >Webformula</a
+                >
+                Krasnodar
               </h4>
               <p>
                 Project role: Html layout. Project description: html layout,
-                frontend, site support.
+                frontend, website support.
               </p>
-              <h4>Now</h4>
-              <p>Freelance, support ruralisation.ru</p>
+              <h6>Today</h6>
+              <p>
+                Freelance, support of project sites
+                <a
+                  href="https://ruralisation.ru"
+                  target="blanc"
+                  title="Project Ruralisation"
+                  >Ruralisation.ru</a
+                >, teaching at
+                <a href="https://rs.school/js" target="blanc" title="Rs School"
+                  >Rs School</a
+                >
+              </p>
 
               <h3 class="block-title">Portfolio:</h3>
+              <div class="title-underline"></div>
               <ul>
-                <li>Here is one of my works: Expedition</li>
                 <li>
-                  Here are my other active and educational projects: Projects
+                  Here is one of my works:
+                  <a
+                    href="https://ruralisation.ru/expedition"
+                    target="blanc"
+                    title="Expedition"
+                    >Expedition</a
+                  >
+                </li>
+                <li>
+                  Here are my other active and educational projects:
+                  <a
+                    href="https://domdev.ru/projects"
+                    target="blanc"
+                    title="Projects"
+                    >Projects</a
+                  >
                 </li>
               </ul>
-              <div class="title-wrap title-flowerblue mt-50">
+              <div class="title-wrap title-flowerblue">
                 <h2 class="section__title">Education</h2>
               </div>
-              <h4 class="block-title">
+              <h5>
                 Ural Pedagogical University, Yekaterinburg, Faculty of
                 Mathematics, 1991
-              </h4>
-              <h4 class="block-title">
-                Courses GeekBrains, Faculty of web development, 2019
-              </h4>
-              <ul>
-                Certificates:
-                <li>GeekBrains HTML/CSS</li>
-                <li>GeekBrains JavaScript</li>
-                <li>GeekBrains PHP</li>
-                <li>GeekBrains MySQL</li>
+              </h5>
+              <h5>Courses GeekBrains, Faculty of web development, 2019</h5>
+              <ul class="list-certificate">
+                <li>
+                  <a
+                    href="https://gb.ru/certificates/606233.en"
+                    target="blanc"
+                    title="Certificate GeekBrains HTML/CSS"
+                    >GeekBrains HTML/CSS</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://gb.ru/certificates/617670.en"
+                    target="blanc"
+                    title="Certificate GeekBrains JavaScript"
+                    >GeekBrains JavaScript</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://gb.ru/certificates/682266.en"
+                    target="blanc"
+                    title="Certificate GeekBrains PHP"
+                    >GeekBrains PHP</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://gb.ru/certificates/888600.en"
+                    target="blanc"
+                    title="Certificate GeekBrains MySQL"
+                    >GeekBrains MySQL</a
+                  >
+                </li>
               </ul>
-              <h3 class="block-title">English</h3>
-              <p>A2 GeekBrains Certificate English test</p>
             </div>
           </section>
         </div>
