feat: add link to github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV Basalyuk Dmitriy</title>     
+    <title>CV Basalyuk Dmitriy</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
       <header class="header">
         <div class="content">
           <div class="section-left">
-            <div class="photo">
+            <figure class="photo">
               <div class="photo__wr">
                 <div class="photo__inner">
                   <img
@@ -23,7 +23,7 @@
                   />
                 </div>
               </div>
-            </div>
+            </figure>
           </div>
           <section class="section-right">
             <h1 class="header__title">Basalyuk <span>Dmitriy</span></h1>
@@ -37,6 +37,7 @@
             <h3 class="block-title">Contacts</h3>
             <div class="title-underline"></div>
             <ul>
+              <li>location: Krasnodar, Russia</li>
               <li>
                 email:
                 <br />
@@ -80,7 +81,7 @@ hello('RS School');</pre
             <h3 class="block-title">English</h3>
             <div class="title-underline"></div>
             <p class="test">
-              A2
+              A2+
               <a
                 href="https://gb.ru/certificates/650735.en"
                 target="blanc"
@@ -222,6 +223,12 @@ hello('RS School');</pre
 
       <footer class="footer">
         <div class="footer__wrap">
+          <a class="footer__link-logo" href="https://github.com/dimitos">
+            <svg>
+              <use xlink:href="images/icons.svg#github"></use>
+            </svg>
+          </a>
+          <p>Dmitriy Baslyuk &#9400; 2021</p>
           <a class="footer__link-logo" href="https://rs.school/js">
             <img
               src="images/rs_school_js.svg"
@@ -230,7 +237,6 @@ hello('RS School');</pre
               height="24"
             />
           </a>
-          <p>&#9400; 2021</p>
         </div>
       </footer>
     </div>
