--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <div class="photo__wr">
                 <div class="photo__inner">
                   <img
-                    src="images/img__99.jpg"
+                    src="images/img__99.png"
                     alt="photo"
                     width="186"
                     height="186"
