--- a/index.html
+++ b/index.html
@@ -81,18 +81,7 @@
             <pre class="code">
 const hello = name => `Hello, ${name}!`;
 hello('RS School');</pre
-            >
-            <h3 class="block-title">English</h3>
-            <div class="title-underline"></div>
-            <p class="test">
-              A2
-              <a
-                href="https://gb.ru/certificates/650735.en"
-                target="blanc"
-                title="Certificate English test"
-                >Certificate</a
-              >
-            </p>
+            >            
           </aside>
           <section class="section-right">
             <div class="main-section-right__wr">
@@ -101,29 +90,12 @@ hello('RS School');</pre
               </div>
               <h3 class="block-title">Profile</h3>
               <div class="title-underline"></div>
-              <ul class="list">
-                <li>
-                  Hi! I have a great desire to move towards fullstack JavaScript
-                  development.
-                </li>
-                <li>
-                  My priorities are learning: JavaScript, Node.js, React.js,
-                  Vue.js, Typescript.
-                </li>
-                <li>
-                  I want to participate in team development using Git, learn the
-                  component approach to development.
-                </li>
-              </ul>
-              <blockquote>
-                <i>
-                  The first “Hello, World!” I wrote at 49 years old. I have
-                  passed the initial level of web development, I have a little
-                  experience of commercial work on freelance. Now I am 51 and I
-                  want to study at RS School. This proves my learning ability,
-                  efficiency and determination.
-                </i>
-              </blockquote>
+              <p>
+                Hi! I have a great desire to move towards fullstack JavaScript
+                development. My priorities are learning: JavaScript, Node.js, React.js,
+                Vue.js, Typescript. I want to participate in team development using Git, learn the
+                component approach to development. I have a little experience of commercial work on freelance.
+              </p>              
               <div class="title-wrap title-flowerblue">
                 <h2 class="section__title">Work experience</h2>
               </div>
@@ -220,6 +192,16 @@ hello('RS School');</pre
                   >
                 </li>
               </ul>
+              <h3 class="block-title">English</h3>
+              <div class="title-underline"></div>
+              <p class="test">
+                A2
+                <a
+                  href="https://gb.ru/certificates/650735.en"
+                  target="blanc"
+                  title="Certificate English test"
+                  >Certificate</a>
+              </p>
             </div>
           </section>
         </div>
