--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Basalyuk Dmitriy</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -12,7 +17,7 @@
       <header class="header">
         <div class="content">
           <div class="section-left">
-            <figure class="photo">
+            <div class="photo">
               <div class="photo__wr">
                 <div class="photo__inner">
                   <img
@@ -23,7 +28,7 @@
                   />
                 </div>
               </div>
-            </figure>
+            </div>
           </div>
           <section class="section-right">
             <h1 class="header__title">Basalyuk <span>Dmitriy</span></h1>
@@ -37,7 +42,6 @@
             <h3 class="block-title">Contacts</h3>
             <div class="title-underline"></div>
             <ul>
-              <li>location: Krasnodar, Russia</li>
               <li>
                 email:
                 <br />
@@ -77,18 +81,7 @@
             <pre class="code">
 const hello = name => `Hello, ${name}!`;
 hello('RS School');</pre
-            >
-            <h3 class="block-title">English</h3>
-            <div class="title-underline"></div>
-            <p class="test">
-              A2+
-              <a
-                href="https://gb.ru/certificates/650735.en"
-                target="blanc"
-                title="Certificate English test"
-                >Certificate</a
-              >
-            </p>
+            >            
           </aside>
           <section class="section-right">
             <div class="main-section-right__wr">
@@ -97,29 +90,12 @@ hello('RS School');</pre
               </div>
               <h3 class="block-title">Profile</h3>
               <div class="title-underline"></div>
-              <ul class="list">
-                <li>
-                  Hi! I have a great desire to move towards fullstack JavaScript
-                  development.
-                </li>
-                <li>
-                  My priorities are learning: JavaScript, Node.js, React.js,
-                  Vue.js, Typescript.
-                </li>
-                <li>
-                  I want to participate in team development using Git, learn the
-                  component approach to development.
-                </li>
-              </ul>
-              <blockquote>
-                <i>
-                  The first “Hello, World!” I wrote at 49 years old. I have
-                  passed the initial level of web development, I have a little
-                  experience of commercial work on freelance. Now I am 51 and I
-                  want to study at RS School. This proves my learning ability,
-                  efficiency and determination.
-                </i>
-              </blockquote>
+              <p>
+                Hi! I have a great desire to move towards fullstack JavaScript
+                development. My priorities are learning: JavaScript, Node.js, React.js,
+                Vue.js, Typescript. I want to participate in team development using Git, learn the
+                component approach to development. I have a little experience of commercial work on freelance.
+              </p>              
               <div class="title-wrap title-flowerblue">
                 <h2 class="section__title">Work experience</h2>
               </div>
@@ -216,6 +192,16 @@ hello('RS School');</pre
                   >
                 </li>
               </ul>
+              <h3 class="block-title">English</h3>
+              <div class="title-underline"></div>
+              <p class="test">
+                A2
+                <a
+                  href="https://gb.ru/certificates/650735.en"
+                  target="blanc"
+                  title="Certificate English test"
+                  >Certificate</a>
+              </p>
             </div>
           </section>
         </div>
@@ -223,12 +209,6 @@ hello('RS School');</pre
 
       <footer class="footer">
         <div class="footer__wrap">
-          <a class="footer__link-logo" href="https://github.com/dimitos">
-            <svg>
-              <use xlink:href="images/icons.svg#github"></use>
-            </svg>
-          </a>
-          <p>Dmitriy Baslyuk &#9400; 2021</p>
           <a class="footer__link-logo" href="https://rs.school/js">
             <img
               src="images/rs_school_js.svg"
@@ -237,6 +217,7 @@ hello('RS School');</pre
               height="24"
             />
           </a>
+          <p>&#9400; 2021</p>
         </div>
       </footer>
     </div>
