--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Basalyuk Dmitriy</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -17,7 +12,7 @@
       <header class="header">
         <div class="content">
           <div class="section-left">
-            <div class="photo">
+            <figure class="photo">
               <div class="photo__wr">
                 <div class="photo__inner">
                   <img
@@ -28,7 +23,7 @@
                   />
                 </div>
               </div>
-            </div>
+            </figure>
           </div>
           <section class="section-right">
             <h1 class="header__title">Basalyuk <span>Dmitriy</span></h1>
@@ -42,6 +37,16 @@
             <h3 class="block-title">Contacts</h3>
             <div class="title-underline"></div>
             <ul>
+              <li>
+                location:
+                <br />
+                <a
+                  href="https://goo.gl/maps/XnbewnjqsguUiESa7"
+                  target="blanc"
+                  title="location"
+                  >Krasnodar, Russia</a
+                >
+              </li>
               <li>
                 email:
                 <br />
@@ -80,8 +85,8 @@
             <div class="title-underline"></div>
             <pre class="code">
 const hello = name => `Hello, ${name}!`;
-hello('RS School');</pre
-            >            
+console.log(hello('RS School'));</pre
+            >
           </aside>
           <section class="section-right">
             <div class="main-section-right__wr">
@@ -92,10 +97,12 @@ hello('RS School');</pre
               <div class="title-underline"></div>
               <p>
                 Hi! I have a great desire to move towards fullstack JavaScript
-                development. My priorities are learning: JavaScript, Node.js, React.js,
-                Vue.js, Typescript. I want to participate in team development using Git, learn the
-                component approach to development. I have a little experience of commercial work on freelance.
-              </p>              
+                development. My priorities are learning: JavaScript, Node.js,
+                React.js, Vue.js, Typescript. I want to participate in team
+                development using Git, learn the component approach to
+                development. I have a little experience of commercial work on
+                freelance.
+              </p>
               <div class="title-wrap title-flowerblue">
                 <h2 class="section__title">Work experience</h2>
               </div>
@@ -132,7 +139,7 @@ hello('RS School');</pre
               <div class="title-underline"></div>
               <ul>
                 <li>
-                  Here is one of my works:
+                  This is one of my works:
                   <a
                     href="https://ruralisation.ru/expedition"
                     target="blanc"
@@ -141,7 +148,7 @@ hello('RS School');</pre
                   >
                 </li>
                 <li>
-                  Here are my other active and educational projects:
+                  These are my other work and study projects:
                   <a
                     href="https://domdev.ru/projects"
                     target="blanc"
@@ -192,15 +199,17 @@ hello('RS School');</pre
                   >
                 </li>
               </ul>
+
               <h3 class="block-title">English</h3>
               <div class="title-underline"></div>
               <p class="test">
-                A2
+                A2+
                 <a
                   href="https://gb.ru/certificates/650735.en"
                   target="blanc"
                   title="Certificate English test"
-                  >Certificate</a>
+                  >Certificate</a
+                >
               </p>
             </div>
           </section>
@@ -209,6 +218,12 @@ hello('RS School');</pre
 
       <footer class="footer">
         <div class="footer__wrap">
+          <a class="footer__link-logo" href="https://github.com/dimitos">
+            <svg>
+              <use xlink:href="images/icons.svg#github"></use>
+            </svg>
+          </a>
+          <p>Dmitriy Baslyuk &#9400; 2021</p>
           <a class="footer__link-logo" href="https://rs.school/js">
             <img
               src="images/rs_school_js.svg"
@@ -217,7 +232,6 @@ hello('RS School');</pre
               height="24"
             />
           </a>
-          <p>&#9400; 2021</p>
         </div>
       </footer>
     </div>
